--- a/my-app/src/style.scss
+++ b/my-app/src/style.scss
@@ -5,4 +5,10 @@ body {
   padding: 0;
   font-family: sans-serif;
   color: $black;
+  display: flex;
+  justify-content: center;
+}
+
+* {
+  box-sizing: border-box;
 }
