--- a/my-app/src/style.scss
+++ b/my-app/src/style.scss
@@ -5,9 +5,15 @@ body {
   padding: 0;
   font-family: sans-serif;
   color: $black;
-  display: flex;
-  justify-content: center;
 }
+
+// Set outer divs to full width
+.App, #root {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+ }
 
 * {
   box-sizing: border-box;
